[package]
name = "pscan"
version = "0.1.0"
edition = "2021"
description = "A TCP/UDP port scanner"
license = "Unlicense"

[dependencies]
# Command line argument parsing
clap = {version = "4.5.27", features = ["derive"]}

# Static map initialization
once_cell = "1.20.2"

# CPU count
num_cpus = "1.16.0"

# Support for ping without the need for sudo
ping-rs = "0.1.2"
